gateway_api/frontend-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: demo
spec:
  parentRefs:
    - name: public-gateway

  hostnames:
    - "demoapp.rajesh.top"

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend-external
          port: 80
